2.3/yaml/step2/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  lesson8-svc-2
spec:
  selector:
    app:  lesson8-2
  ports:
  - name: web
    port:  80
    targetPort:  80
  # - name: secure-web
  #   protocol: TCP
  #   port: 443
  #   targetPort: 8443
